--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.8.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
