--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "amqplib": "^0.8.0",
+    "express": "^4.17.1",
     "mongoose": "^6.0.2"
   },
   "devDependencies": {},
