--- a/order-service/package.json
+++ b/order-service/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.8.0",
-    "mongoose": "^6.0.2",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.4",
     "nodemon": "^2.0.12"
   }
 }
