--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2"
   },
   "devDependencies": {},
